# toktik-thumbnail-worker

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  thumbnail_worker.py
.github/workflows/: build.yml
