[tool.poetry]
name = "toktik-thumbnail-worker"
version = "0.1.0"
description = ""
authors = ["Suphawit <suphawit.won@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
redis = "^5.0.1"
moviepy = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
